ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordapp-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: web
                port:
                  number: 80
